fixed footer spacing and colour issues, grainy hero logo, fixed sponsors p width, changed to Art photo

--- a/lifehacks2020/styles/about.css
+++ b/lifehacks2020/styles/about.css
@@ -5,17 +5,13 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  text-align: right;
+  text-align: left;
   padding-top: 10rem;
 }
 
 .about__section img {
   width: 40%;
   margin-right: 10rem;
-}
-
-.about__section:nth-of-type(2) {
-  text-align: left;
 }
 
 .about__section:nth-of-type(2) img {
