--- a/lifehacks2020/styles/footer.css
+++ b/lifehacks2020/styles/footer.css
@@ -2,11 +2,12 @@
 
 .footer {
   background: url("../images/footer-bg.png");
-  background-position: center;
+  background-position: center bottom;
   display: grid;
   grid-template-columns: repeat(2, auto);
   padding-top: 7rem;
   padding-bottom: 7rem;
+  align-items: center;
 }
 
 .footer h1, .footer i, .footer li {
@@ -14,17 +15,25 @@
 }
 
 .footer h1 {
-  margin-bottom: 1.25rem;
+  margin-bottom: 2.5rem;
 }
 
 .footer .button {
-  background-color: var(--yellow);
-  color: var(--navy);
-}
-
-.footer .button:hover {
+  padding: 0.75rem 2.75rem;
+  font-size: 1.5rem;
   background-color: #fff;
   color: var(--green);
+}
+
+.footer .button:hover, .footer .button:active{
+  opacity: 1;
+  background-color: var(--yellow);
+  color: var(--navy);
+  transition: all 0.3s;
+}
+
+.footer__socials {
+  margin-bottom: 1rem;
 }
 
 .footer i {
@@ -41,17 +50,8 @@
   margin-bottom: 1rem;
 }
 
-.footer a:hover, .footer a:active {
-  opacity: 0.5;
-  transition: opacity 0.3s;
+.footer a:hover, .footer a:active, .footer i:hover, .footer i:active {
+  color: var(--yellow);
+  transition: color 0.2s;
 }
 
-.footer .button {
-  padding: 0.75rem 2.75rem;
-  font-size: 1.75rem;
-}
-
-.footer .button:hover, .footer .button:active{
-  opacity: 1;
-  transition: all 0.3s;
-}
