--- a/lifehacks2020/styles/hero.css
+++ b/lifehacks2020/styles/hero.css
@@ -20,7 +20,7 @@
   font-size: 1.5rem;
 }
 
-#hero img {
-  width: 7rem;
+#hero .logo {
+  width: 5rem;
   margin-right: 1.5rem;
 }
